Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -1,6 +1,6 @@
 yes = Si
 no = No
-percentage = {0,number,\#.\#}%
+percentage = {0,number,#.#}%
 report = Report
 errorDetails = Dettagli errore
 cancel = Cancella
@@ -53,7 +53,7 @@ coop.leaderboard.time = Tempo
 coop.leaderboard.replay = Replay
 coop.leaderboard.allPlayers = Tutto
 coop.leaderboard.singlePlayer = 1 giocatore
-coop.leaderboard.numberOfPlayersFormat = {0,number,\#} giocatori
+coop.leaderboard.numberOfPlayersFormat = {0,number,#} giocatori
 coop.leaderboard.couldNotLoad = Impossibile caricare la classifica Co-Op.
 coop.couldNotLoad = Impossibile caricare missioni Co-Op\: {0}
 ranked1v1.players = Giocatori (con almeno {0} partite giocate)
@@ -73,10 +73,10 @@ ranked1v1.ratingHint.high = La tua valutazione è alta. Perché non aiuti gli al
 ranked1v1.ratingHint.top = Congratulazioni\! Sei un Top Player. Condividi le tue conoscenze.
 ranked1v1.gamesPlayed = Partite giocate
 ranked1v1.ranking = Posizione classifica
-ranked1v1.rankingOutOf = su {0,number,\#} giocatori
+ranked1v1.rankingOutOf = su {0,number,#} giocatori
 ranked1v1.searching = Ricerca di un avversario...
 ranked1v1.winLossRation = Proporzione vittorie/sconfitte
-ranked1v1.rankingFormat = \#{0,number,\#}
+ranked1v1.rankingFormat = \#{0,number,#}
 ranked1v1.notification.title = Disponibile sfida classificata 1v1
 ranked1v1.notification.message = Clicca qui per aprire il tab 1v1
 statusBar.chatConnected = Chat connessa
@@ -117,7 +117,7 @@ chat.sendMessageTask.title = Invio messaggio chat...
 chat.sendActionTask.title = Invio azione chat...
 chat.clanTagFormat = [{0]}
 chat.imageUploadTask.title = Caricamento immagine...
-chat.userCount = {0,number,\#} utenti (digita per cercare)
+chat.userCount = {0,number,#} utenti (digita per cercare)
 chat.mapName = Nome Mappa\: {0}
 chat.filter.filter = Filtro
 chat.filter.prompt = Ricerca nel canale
@@ -136,12 +136,12 @@ chat.privateMessage.playerLeft = {0} é offline ora
 chat.privateMessage.playerReconnect = {0} é tornato online
 chat.privateMessage.globalRating = Valutazione globale
 chat.privateMessage.ladder1v1Rating = Valutazione 1v1
-chat.privateMessage.ratingFormat = {0,number,\#}
+chat.privateMessage.ratingFormat = {0,number,#}
 chat.privateMessage.gamesPlayed = Partite giocate
 chat.privateMessage.currentlyPlaying = Attualmente in partita
 chat.privateMessage.game.players = Giocatori
 chat.privateMessage.achievements.unlocked = Obiettivi sbloccati
-chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
+chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Crea partita
 games.create.minRating = Min.
 games.create.maxRating = Max.
@@ -171,19 +171,19 @@ game.title = Titolo
 game.players = Giocatori
 game.map = Mappa
 game.rating = Valutazione
-game.ratingFormat.minOnly = >\={0,number,\#}
-game.ratingFormat.maxOnly = <\={0,number,\#}
-game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
+game.ratingFormat.minOnly = >\={0,number,#}
+game.ratingFormat.maxOnly = <\={0,number,#}
+game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Valutazione fuori dal range
-game.joinGameRatingConfirmation.text = Questa partita è per giocatori con valutazione tra {0,number,\#} e {1,number,\#}, la tua valutazione attuale invece è {2,number,\#}.\n\nSei sicuro di voler entrare?
+game.joinGameRatingConfirmation.text = Questa partita è per giocatori con valutazione tra {0,number,#} e {1,number,#}, la tua valutazione attuale invece è {2,number,#}.\n\nSei sicuro di voler entrare?
 game.type = Tipo
 game.mods = Mod
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} giocatori
+game.players.format = {0,number,#}/{1,number,#}
+game.detail.players.format = {0,number,#}/{1,number,#} giocatori
 game.join = Entra
 game.cancel = Cancella
 game.host = Host
-game.tooltip.teamTitle = Squadra {0} ({1,number,\#})
+game.tooltip.teamTitle = Squadra {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam = Nessuna squadra
 game.tooltip.observers = Osservatori
 game.join.passwordPrompt = Inserisci password della partita
@@ -192,7 +192,7 @@ game.start.couldNotStart = Impossibile avviare la partita. Vedi i dettagli d'err
 game.full = Partita al completo
 game.full.action = Clicca per aprire la partita
 # Fuzzy
-game.mods.twoAndMore = {0} e{1,number,\#} più
+game.mods.twoAndMore = {0} e{1,number,#} più
 game.gameStatus = Stato partita
 game.gameStatus.playing = In gioco
 game.gameStatus.lobby = In attesa dell'avvio della partita
@@ -206,10 +206,15 @@ game.endTime = Ora di fine
 game.validity = Validità
 game.victoryCondition = Condizioni vittoria
 game.player.id = ID Giocatore
+# Fuzzy
 game.player.username = Nome Giocatore
+# Fuzzy
 game.player.faction = Fazione Giocatore
+# Fuzzy
 game.player.team = Squadra Giocatore
+# Fuzzy
 game.player.startSpot = Posizione di partenza Giocatore
+# Fuzzy
 game.player.score = Punteggio Giocatore
 game.host.id = ID Host
 game.host.username = Username Host
@@ -219,6 +224,7 @@ game.map.version = Versione mappa
 game.map.folderName = Nome cartella mappa
 # seems a displayed flag/info to me
 game.map.isRanked = Mappa classificata
+# Fuzzy
 game.map.displayName = Nome mappa
 game.options = Opzioni Partita
 game.optionKey = Opzioni
@@ -234,7 +240,7 @@ game.watch = Guarda
 game.watchButtonFormat = Guarda ({0})
 game.watchDelayedFormat = Guardabile in {0}
 game.replayFileMissing = File di replay mancante
-game.idFormat = \#{0,number,\#}
+game.idFormat = \#{0,number,#}
 game.lineUp = Schieramento
 featuredMod.displayName = Nome mod
 featuredMod.technicalName = Nome breve mod
@@ -250,8 +256,10 @@ login.button.cancel = Cancella
 login.progress.message = Connessione...
 vault.maps = Mappe
 vault.mods = Mod
+# Fuzzy
 vault.onlineReplays = Replay Online
 vault.localReplays = Replay Locali
+# Fuzzy
 vault.liveReplays = Replay dal vivo
 vault.replays.loading = Caricamento replay...
 vault.replays.newest = Più recente
@@ -263,7 +271,9 @@ vault.more = Più...
 modVault.newestMods = Più recente
 modVault.install = Installa
 modVault.uninstall = Disinstalla
+# Fuzzy
 modVault.installationFailed = Impossibile installare Mod "{0}"\: {1}
+# Fuzzy
 modVault.couldNotDeleteMod = Impossibile eliminare Mod " {0}\: {1}
 modVault.loadingMods = Caricamento mod...
 modVault.upload.chooseDirectory = Seleziona cartella mod
@@ -292,8 +302,8 @@ mapVault.upload.failed = Impossibile caricare la mappa. Il Server a restituito i
 mapVault.upload.mapSize = Dimensione
 mapVault.upload.players = Giocatori
 mapVault.upload.chooseDirectory = Scegli cartella mappe
-mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
-mapVault.upload.playersFormat = {0,number,\#}
+mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Confermo che questa mappa è adeguatamente bilanciata e non contiene codice proibito- Sono consapevole che una violazione risulterà in un ban.\nDeselezionare questo risulterà in una mappa non classificata.
 mapVault.upload.retry = Riprova
 mapVault.loadingMaps = Caricamento mappe...
@@ -317,12 +327,14 @@ map.ranked = Classificata
 map.reviews = Review
 map.updated = Aggiornata
 map.maxPlayers = Max. giocatori
+# Fuzzy
 map.width = Larghezza (in px)
+# Fuzzy
 map.height = Altezza (in px)
 map.uploadedDateTime = Caricata
 map.updatedDateTime = Aggiornata
 mapPreview.name = Nome Mappa\: {0}
-mapPreview.size = {0,number,\#}km x {1,number,\#}km
+mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Impossibile caricare anteprima mappa
 replays.loadingOnlineTask.title = Caricamento replay online...
 replays.loadingOnlineTask.failed = Impossibile caricare replay online.
@@ -374,44 +386,46 @@ userInfo.ratingOverTime = Valutazione nel tempo
 userInfo.ratingHistory.1v1 = 1v1
 userInfo.ratingHistory.global = Globale
 userInfo.achievements = Trofei
-userInfo.tooltipFormat = {0} ({1,number,\#})
-userInfo.ratingFormat = Valutazione globale\: {0,number,\#}\nValutazione classifica\: {1,number,\#}
+userInfo.tooltipFormat = {0} ({1,number,#})
+userInfo.ratingFormat = Valutazione globale\: {0,number,#}\nValutazione classifica\: {1,number,#}
 user.status.hosting = In hosting\: {0}
 user.status.waiting = In attesa\: {0}
 user.status.playing = In partita\: {0}
-achievement.stepsFormat = {0,number,\#}/{1,number,\#}
+achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Più recente
 achievements.loading = Caricamento trofei...
-achievements.unlocked = Vinti ({0,number,\#})
-achievements.locked = Da sbloccare ({0,number,\#})
+achievements.unlocked = Vinti ({0,number,#})
+achievements.locked = Da sbloccare ({0,number,#})
 replayServer.listeningFailed = Impossibile avviare il server dei replay
 replayServer.retry = Riprova
 replayServer.unreachable = Il server dei replay non è raggiungibile, la partita non può essere registrata.
+# Fuzzy
 corruptedMods.notification = Mod corrotta e non può essere caricata\: {0}.
 corruptedMods.show = Visualizza
 corruptedReplayFiles.notification = Ci sono replay corrotti sul disco. Sono stati spostati in una cartella separata per convenienza.
 corruptedReplayFiles.show = Visualizza
+# Fuzzy
 mapNotFound = La mappa "{0}" non è stata trovata né sul server né in questo computer.
-replayCouldNotBeStarted = Impossibile avviare il replay {0,number,\#}. Vedi il messaggio di errore sotto.
+replayCouldNotBeStarted = Impossibile avviare il replay {0,number,#}. Vedi il messaggio di errore sotto.
 liveReplayCouldNotBeStarted = Impossibile avviare il replay dal vivo. Vedi il messaggio di errore sotto.
-duration.seconds = {0,number,\#}s
-duration.minutesSeconds = {0,number,\#}min {1,number,\#}s
-duration.hourMinutes = {0,number,\#}h {1,number,\#}min
+duration.seconds = {0,number,#}s
+duration.minutesSeconds = {0,number,#}min {1,number,#}s
+duration.hourMinutes = {0,number,#}h {1,number,#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020vsu0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = ,u0020
-secondsAgo = {0,number,\#} secondi fa
-minuteAgo = {0,number,\#} minuto fa
-minutesAgo = {0,number,\#} minuti fa
-hourAgo = {0,number,\#} ora fa
-hoursAgo = {0,number,\#} ore fa
-dayAgo = {0,number,\#} giorno fa
-daysAgo = {0,number,\#} giorni fa
-monthAgo = {0,number,\#} mese fa
-monthsAgo = {0,number,\#} mesi fa
-yearAgo = {0,number,\#} anno fa
-yearsAgo = {0,number,\#} anni fa
+secondsAgo = {0,number,#} secondi fa
+minuteAgo = {0,number,#} minuto fa
+minutesAgo = {0,number,#} minuti fa
+hourAgo = {0,number,#} ora fa
+hoursAgo = {0,number,#} ore fa
+dayAgo = {0,number,#} giorno fa
+daysAgo = {0,number,#} giorni fa
+monthAgo = {0,number,#} mese fa
+monthsAgo = {0,number,#} mesi fa
+yearAgo = {0,number,#} anno fa
+yearsAgo = {0,number,#} anni fa
 settings.languages.restart.message = Hai cambiato la lingua. E' richiesto un riavvio.
 settings.languages.restart = Riavvio
 settings.languages.system = Auto
@@ -430,6 +444,7 @@ settings.chat.previewImages = Anteprima URL immagine con cursore mouse sopra
 settings.chat.colors = Colori
 # Fuzzy
 settings.chat.timeFormat = Formato tempo
+# Fuzzy
 settings.chat.colorMode.default = Default\: Usa colori di default per tutti gli utenti
 settings.chat.colorMode.custom = Personalizzato\: Permetti colori personalizzati per utenti specifici
 settings.chat.colorMode.random = Casuale\: Ogni utente ha un colore casuale unico
@@ -465,7 +480,7 @@ settings.notifications.friendOnline = Amico online
 settings.notifications.friendJoinsGame = Amico entra in partita
 settings.notifications.friendPlaysGame = Amico gioca una partita
 settings.notifications.friendOffline = Amico offline
-settings.screenFormat = Schermo {0,number,\#}
+settings.screenFormat = Schermo {0,number,#}
 settings.account = Account
 settings.account.changePassword = Cambia Password
 settings.account.currentPassword = Password corrente
@@ -510,7 +525,7 @@ review.starsTip.four = Mi è piaciuto
 review.starsTip.five = Mi è piaciuto molto
 reviews.title = Recensioni
 reviews.myReview = La mia recensione
-reviews.totalReviewers = {0,number,\#} totali
+reviews.totalReviewers = {0,number,#} totali
 reviews.create = Scrivi recensione
 reviewScore.five = 5
 reviewScore.four = 4
@@ -550,6 +565,7 @@ mod.uploadedDateTime = Caricata
 mod.updatedDateTime = Aggiornata
 mod.id = ID
 mod.uid = UID
+# Fuzzy
 mod.type = Tip
 mod.ranked = Classificata
 mod.filename = Nome file
@@ -572,6 +588,7 @@ search.sort = Ordinato per
 vault.mods.searchError = Impossibile caricare Mod
 noDateAvailable = Data non disponibile
 map.created = Creata\:
+# Fuzzy
 modType.ui = UI mod
 modType.sim = Sim mod
 menu.connect = Connessione
@@ -621,7 +638,7 @@ tournament.noStartingDate = Data di inizio non definita
 tournament.noCompletionDate = non ancora completato
 loading = Caricamento...
 updater.readingFileList = Lettura lista file
-secondAgo = {0,number,\#} secondo fa
+secondAgo = {0,number,#} secondo fa
 vault.maps.searchError = Impossibile caricare mappe
 settings.notifications.displayNotification = Visualizzazione notifiche
 replay.notFoundTitle = Impossibile trovare la partita
@@ -645,6 +662,7 @@ settings.appearance.chooseImage = Scegli una immagine
 settings.general.theme.useNoImage = Nessuna immagine
 query.notContains = non contiene
 coop.unknownMission = Missione sconosciuta
+# Fuzzy
 game.couldNotJoin = Impossibile entrare nella partita con id "{0}.
 discord.disallowJoins = Disabilita ingresso giocatori da Discord
 # Fuzzy
@@ -658,12 +676,13 @@ menu.revealGamePrefsFile = Trova file game.prefs
 ranked1v1.queuePopTimer = Selezione avversario con skill simile in {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Genera mappa
-game.avgRating.format = {0,number,\#}
+game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Generazione mappa...
 game.mapGeneration.notification.message = Perfavore attendi. (Versione\: {0}, Seed\: {1})
 game.mapGeneration.failed.title = Generazione mappa fallita.
 game.mapGeneration.failed.message = Impossibile generare la mappa richiesta, il processo di generazione non è terminato entro il timeout. Cancellazione processo.
 game.mapGeneration.downloadGenerator.title = Scaricamento generatore mappa versione {0}
+# Fuzzy
 game.mapGeneration.generateMap.title = Generazione mappa... (Versione\: {0}, Seed\: {1})
 login.environment = Ambiente
 login.button.downloadUpdate = Scarica l'ultima versione
@@ -674,7 +693,7 @@ login.ircServerHost = Host server IRC
 login.withEmailWarning = Perfavore connettiti con la tua username e non con l'email.
 vault.next = Successivo
 vault.previous = Precedente
-vault.currentPage = Pagina\: {0,number,\#}
+vault.currentPage = Pagina\: {0,number,#}
 mapVault.recommended = M&M Squadre Prescelte
 settings.appearance.useNone = Non usare immagine
 settings.chat.addAutoJoinChannel = Aggiungi canale
@@ -723,6 +742,7 @@ tutorial.tutorial = Tutorial
 tutorial.launch = Avvia Tutorial
 tutorial.mapName = Nome mappa\: {0}
 tutorial.launchFailed = Avvio Tutorial fallito
+# Fuzzy
 mapVault.installationFailed = Installazione mappa fallita per mappa "{0}" con messaggio "{1}"
 tutorial.loading = Caricamento tutorial
 tutorial.noneAvailable = Attualmente non ci sono tutorial
@@ -806,6 +826,7 @@ mod.manager.simModsTooltip = Le mod SIM sono le mod che modificano il gameplay d
 mod.manager.uiModsTooltip = Le mod UI sono le mod che modificano solo l'interfaccia del gioco.
 modVault.modManager = Gestisci mod attive
 modVault.manageMods = Gestisci mod attive
+# Fuzzy
 theme.needsRestart.message = Modificare il tema a "{0}" potrebbe richiedere un riavvio.
 theme.needsRestart.quit = Esci
 vault.loading = Caricamento...
