Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -1,6 +1,6 @@
 yes = Tak
 no = Nie
-percentage = {0,number,\#.\#}%
+percentage = {0,number,#.#}%
 report = Zgłoś
 errorDetails = Szczegóły błędu
 cancel = Anuluj
@@ -61,7 +61,7 @@ coop.leaderboard.time = Czas
 coop.leaderboard.replay = Powtórka
 coop.leaderboard.allPlayers = Wszyscy
 coop.leaderboard.singlePlayer = Jeden gracz
-coop.leaderboard.numberOfPlayersFormat = {0,number,\#} graczy
+coop.leaderboard.numberOfPlayersFormat = {0,number,#} graczy
 # The previous one was really (like really really) awkward :D
 coop.leaderboard.couldNotLoad = Nie załadowano rankingu dla trybu współpracy
 # The previous one had a typo and was inconsistent with "Co-Op leaderboard could not be loaded" translation.
@@ -86,10 +86,10 @@ ranked1v1.ratingHint.high = Twoja punktacja jest bardzo wysoka. Może podzielisz
 ranked1v1.ratingHint.top = Gratulacje\! Jesteś liderem. Dziel się swoją wiedzą z innymi\!
 ranked1v1.gamesPlayed = Gry zagrane
 ranked1v1.ranking = Twoja punktacja
-ranked1v1.rankingOutOf = z {0,number,\#} graczy
+ranked1v1.rankingOutOf = z {0,number,#} graczy
 ranked1v1.searching = Szukam przeciwnika...
 ranked1v1.winLossRation = Stosunek wygranych do przegranych
-ranked1v1.rankingFormat = \#{0,numer,\#}
+ranked1v1.rankingFormat = \#{0,numer,#}
 ranked1v1.notification.title = Mecz rankingowy 1 na 1 dostępny.
 ranked1v1.notification.message = Kliknij tutaj aby otworzyć sekcję 1 na 1
 statusBar.chatConnected = Czat podłączony
@@ -134,7 +134,7 @@ chat.sendActionTask.title = Wysyłam akcję czatu...
 # Uhhh... What does this do? In general, what should I do with messages like "{0}" alone or "{0}{1}"?
 chat.clanTagFormat = [{0}]
 chat.imageUploadTask.title = Wstawiam obrazek...
-chat.userCount = {0,number,\#} użytkowników (pisz aby znaleźć)
+chat.userCount = {0,number,#} użytkowników (pisz aby znaleźć)
 chat.mapName = Nazwa mapy\: {0}
 chat.filter.filter = Filtruj
 chat.filter.prompt = Wyszukaj na kanale
@@ -154,13 +154,13 @@ chat.privateMessage.playerReconnect = {0} jest online
 chat.privateMessage.globalRating = Punktacja globalna
 chat.privateMessage.ladder1v1Rating = Punktacja 1 na 1
 # Again, I have no clue what is this.
-chat.privateMessage.ratingFormat = {0,number,\#}
+chat.privateMessage.ratingFormat = {0,number,#}
 chat.privateMessage.gamesPlayed = Zagrane gry
 chat.privateMessage.currentlyPlaying = Grający teraz
 chat.privateMessage.game.players = Gracze
 chat.privateMessage.achievements.unlocked = Osiągnięcia
 # Once again, what do I do with this?
-chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
+chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Stwórz grę
 games.create.minRating = Min.
 games.create.maxRating = Max.
@@ -191,19 +191,19 @@ game.title = Tytuł
 game.players = Gracze
 game.map = Mapa
 game.rating = Punktacja
-game.ratingFormat.minOnly = >\={0,number,\#}
-game.ratingFormat.maxOnly = <\={0,number,\#}
-game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
+game.ratingFormat.minOnly = >\={0,number,#}
+game.ratingFormat.maxOnly = <\={0,number,#}
+game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Punktacja poza granicami
-game.joinGameRatingConfirmation.text = Ta gra jest dla graczy w punktacji pomiędzy {0,number,\#} i {1,number,\#}, lecz twoja punktacja wynosi {2,number,\#}.\n\nJesteś pewien że chcesz dołączyć?
+game.joinGameRatingConfirmation.text = Ta gra jest dla graczy w punktacji pomiędzy {0,number,#} i {1,number,#}, lecz twoja punktacja wynosi {2,number,#}.\n\nJesteś pewien że chcesz dołączyć?
 game.type = Typ
 game.mods = Mody
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} graczy
+game.players.format = {0,number,#}/{1,number,#}
+game.detail.players.format = {0,number,#}/{1,number,#} graczy
 game.join = Dołącz
 game.cancel = Anuluj
 game.host = Host
-game.tooltip.teamTitle = Zespół {0} ({1,number,\#})
+game.tooltip.teamTitle = Zespół {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam = Bez zespołu
 game.tooltip.observers = Widzowie
 game.join.passwordPrompt = Podaj hasło
@@ -212,7 +212,7 @@ game.start.couldNotStart = Gra nie została uruchomiona. Wiadomość błędu pon
 game.full = Gra jest pełna
 game.full.action = Wciśnij aby otworzyć grę
 # Fuzzy
-game.mods.twoAndMore = {0} i {1,number,\#} więcej
+game.mods.twoAndMore = {0} i {1,number,#} więcej
 game.gameStatus = Status gry
 game.gameStatus.playing = W trakcie gry
 game.gameStatus.lobby = Oczekiwanie na rozpoczęcie
@@ -226,10 +226,15 @@ game.endTime = Czas zakończenia
 game.validity = Poprawność
 game.victoryCondition = Warunek zwycięstwa
 game.player.id = ID gracza
+# Fuzzy
 game.player.username = Nazwa gracza
+# Fuzzy
 game.player.faction = Frakcja gracza
+# Fuzzy
 game.player.team = Zespół gracza
+# Fuzzy
 game.player.startSpot = Pozycja startowa gracza
+# Fuzzy
 game.player.score = Punkty gracza
 game.host.id = ID hosta
 game.host.username = Nazwa hosta
@@ -238,6 +243,7 @@ game.map.width = Szerokość mapy (w px)
 game.map.version = Wersja mapy
 game.map.folderName = Nazwa folderu mapy
 game.map.isRanked = Mapa rankingowa
+# Fuzzy
 game.map.displayName = Nazwa mapy
 game.options = Opcje gry
 # Just one option?
@@ -255,7 +261,7 @@ game.watch = Oglądaj
 game.watchButtonFormat = Oglądaj ({0})
 game.watchDelayedFormat = Możliwe do obejrzenia za {0}
 game.replayFileMissing = Plik z powtórką nieznaleziony
-game.idFormat = \#{0,number,\#}
+game.idFormat = \#{0,number,#}
 game.lineUp = Zestawienie
 featuredMod.displayName = Nazwa modyfikacji
 featuredMod.technicalName = Skrót nazwy modyfikacji
@@ -272,8 +278,10 @@ login.button.cancel = Anuluj
 login.progress.message = Logowanie...
 vault.maps = Mapy
 vault.mods = Mody
+# Fuzzy
 vault.onlineReplays = Powtórki online
 vault.localReplays = Lokalne powtórki
+# Fuzzy
 vault.liveReplays = Powtórki na żywo
 vault.replays.loading = Ładowanie powtórek
 vault.replays.newest = Najnowsze
@@ -285,7 +293,9 @@ vault.more = Więcej...
 modVault.newestMods = Najnowsze
 modVault.install = Instaluj
 modVault.uninstall = Odinstaluj
+# Fuzzy
 modVault.installationFailed = Mod "{0}" nie został zainstalowany\: {1}
+# Fuzzy
 modVault.couldNotDeleteMod = Mod "{0}" nie został odinstalowany\: {1}
 modVault.loadingMods = Ładowanie modów...
 modVault.upload.chooseDirectory = Wybierz folder z modyfikacjami
@@ -314,8 +324,8 @@ mapVault.upload.failed = Mapa nie została wstawiona. Serwer napotkał błędy\:
 mapVault.upload.mapSize = Rozmiar
 mapVault.upload.players = Gracze
 mapVault.upload.chooseDirectory = Wybierz ścieżkę mapy
-mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
-mapVault.upload.playersFormat = {0,number,\#}
+mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Potwierdzam że mapa jest zbalansowana i nie zawiera zabronionego kodu. Jestem świadom że łamanie zasad zakończy się banem. Odznaczenie tego spowoduje uznanie za mapę nierankingową.
 mapVault.upload.retry = Ponów
 mapVault.loadingMaps = Ładowanie map...
@@ -339,12 +349,14 @@ map.ranked = Rankingowa?
 map.reviews = Recenzje
 map.updated = Wstawiona
 map.maxPlayers = Max. graczy
+# Fuzzy
 map.width = Szerokość (w px)
+# Fuzzy
 map.height = Wysokość (w px)
 map.uploadedDateTime = Wstawiona
 map.updatedDateTime = Aktualizowana
 mapPreview.name = Nazwa mapy\: {0}
-mapPreview.size = {0,number,\#}km x {1,number,\#}km
+mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Podgląd nie mógł zostać załadowany
 replays.loadingOnlineTask.title = Ładowanie powtórek online...
 replays.loadingOnlineTask.failed = Powtórki Online nie zostały załadowane.
@@ -398,44 +410,46 @@ userInfo.ratingOverTime = Punktacja w czasie
 userInfo.ratingHistory.1v1 = 1 na 1
 userInfo.ratingHistory.global = Globalnie
 userInfo.achievements = Osiągnięcia
-userInfo.tooltipFormat = {0} ({1,number,\#})
-userInfo.ratingFormat = Globalna punktacja\: {0,number,\#}\nPunktacja w tabeli liderów\: {1,number,\#}
+userInfo.tooltipFormat = {0} ({1,number,#})
+userInfo.ratingFormat = Globalna punktacja\: {0,number,#}\nPunktacja w tabeli liderów\: {1,number,#}
 user.status.hosting = Hostuje\: {0}
 user.status.waiting = Czeka w\: {0}
 user.status.playing = Gra\: {0}
-achievement.stepsFormat = {0,number,\#}/{1,number,\#}
+achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Najnowsze
 achievements.loading = Ładowanie osiągnięć...
-achievements.unlocked = Odblokowane ({0,number,\#})
-achievements.locked = Niezdobyte ({0,number,\#})
+achievements.unlocked = Odblokowane ({0,number,#})
+achievements.locked = Niezdobyte ({0,number,#})
 replayServer.listeningFailed = Serwer powtórek nie został uruchomiony
 replayServer.retry = Ponów
 replayServer.unreachable = Serwer powtórek nie jest osiągalny, gra nie będzie nagrywana.
+# Fuzzy
 corruptedMods.notification = Mod jest uszkodzony i nie będzie ładowany\: {0}.
 corruptedMods.show = Pokaż
 corruptedReplayFiles.notification = Na twoim dysku znajdują się uszkodzone powtórki. Dla twojej wygody, zostały one przeniesione do innego folderu.
 corruptedReplayFiles.show = Pokaż
+# Fuzzy
 mapNotFound = Mapa "{0}" nie została znaleziona ani na serwerze ani na komputerze.
-replayCouldNotBeStarted = Powtórka {0,number,\#} nie została załadowana. Wiadomość błędu poniżej.
+replayCouldNotBeStarted = Powtórka {0,number,#} nie została załadowana. Wiadomość błędu poniżej.
 liveReplayCouldNotBeStarted = Powtórka na żywo nie mogła zostać uruchomiona. Wiadomość błędu poniżej.
-duration.seconds = {0,number,\#} sek.
-duration.minutesSeconds = {0,number,\#} min. {1,number,\#} sek.
-duration.hourMinutes = {0,number,\#} godz. {1,number,\#} min.
+duration.seconds = {0,number,#} sek.
+duration.minutesSeconds = {0,number,#} min. {1,number,#} sek.
+duration.hourMinutes = {0,number,#} godz. {1,number,#} min.
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020 kontra u0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = ,u0020
-secondsAgo = {0,number,\#} sekund temu
-minuteAgo = {0,number,\#} minutę temu
-minutesAgo = {0,number,\#} minut temu
-hourAgo = {0,number,\#} godzinę temu
-hoursAgo = {0,number,\#} godzin temu
-dayAgo = {0,number,\#} dzień temu
-daysAgo = {0,number,\#} dni temu
-monthAgo = {0,number,\#} miesiąc temu
-monthsAgo = {0,number,\#} miesiące temu
-yearAgo = {0,number,\#} rok temu
-yearsAgo = {0,number,\#} lata temu
+secondsAgo = {0,number,#} sekund temu
+minuteAgo = {0,number,#} minutę temu
+minutesAgo = {0,number,#} minut temu
+hourAgo = {0,number,#} godzinę temu
+hoursAgo = {0,number,#} godzin temu
+dayAgo = {0,number,#} dzień temu
+daysAgo = {0,number,#} dni temu
+monthAgo = {0,number,#} miesiąc temu
+monthsAgo = {0,number,#} miesiące temu
+yearAgo = {0,number,#} rok temu
+yearsAgo = {0,number,#} lata temu
 settings.languages.restart.message = Aby zmienić język należy zrestartować program.
 settings.languages.restart = Restart
 settings.languages.system = Automatycznie
@@ -454,6 +468,7 @@ settings.chat.previewImages = Podgląd obrazków przy najechaniu kursorem myszy
 settings.chat.colors = Kolory
 # Fuzzy
 settings.chat.timeFormat = Format czasu
+# Fuzzy
 settings.chat.colorMode.default = Domyślnie\: Używaj podstawowych kolorów dla wszystkich użytkowników
 settings.chat.colorMode.custom = Niestandardowe\: Zezwalaj na niestandardowe kolory dla konkretnych użytkowników
 settings.chat.colorMode.random = Losowe\: Każdy użytkownik ma unikalny, losowy kolor 
@@ -489,7 +504,7 @@ settings.notifications.friendOnline = Znajomy online
 settings.notifications.friendJoinsGame = Znajomy dołącza do gry
 settings.notifications.friendPlaysGame = Znajomy gra
 settings.notifications.friendOffline = Znajomy offline
-settings.screenFormat = Pulpit {0,number,\#}
+settings.screenFormat = Pulpit {0,number,#}
 settings.account = Konto
 settings.account.changePassword = Zmień hasło
 settings.account.currentPassword = Aktualne hasło
@@ -534,7 +549,7 @@ review.starsTip.four = Podobało mi się
 review.starsTip.five = Bardzo mi się podobało
 reviews.title = Recenzje
 reviews.myReview = Moja recenzja
-reviews.totalReviewers = W sumie {0,number,\#}
+reviews.totalReviewers = W sumie {0,number,#}
 reviews.create = Napisz recenzję
 reviewScore.five = 5
 reviewScore.four = 4
@@ -574,6 +589,7 @@ mod.uploadedDateTime = Wstawiony
 mod.updatedDateTime = Aktualizowany
 mod.id = ID
 mod.uid = UID
+# Fuzzy
 mod.type = Typ
 mod.ranked = Oceniany
 mod.filename = Nazwa pliku
@@ -596,6 +612,7 @@ search.sort = Sortuj wg.
 vault.mods.searchError = Mody nie zostały załadowane
 noDateAvailable = Data niedostępna
 map.created = Utworzone\:
+# Fuzzy
 modType.ui = Mod UI
 modType.sim = Mod SIM
 menu.connect = Łączenie
@@ -645,7 +662,7 @@ tournament.noStartingDate = Brak daty rozpoczęcia
 tournament.noCompletionDate = Jeszce niezakończony
 loading = Ładowanie...
 updater.readingFileList = Odczytywanie listy plików
-secondAgo = {0,number,\#} sekund temu
+secondAgo = {0,number,#} sekund temu
 vault.maps.searchError = Mapy nie zostały załadowane
 settings.notifications.displayNotification = Pokaż powiadomienie
 replay.notFoundTitle = Nie znaleziono gry
@@ -667,8 +684,10 @@ game.missionName = Misja
 settings.appearance.backgoundImage = Obraz w tle
 settings.appearance.useDefaultImage = Użyj domyślnego obrazu
 settings.appearance.chooseImage = Wybierz obraz
+settings.general.theme.useNoImage = brak obrazu
 coop.unknownMission = Nieznana misja
 discord.disallowJoins = Nie zezwalaj graczom dołączać za pośrednictwem Discord
+# Fuzzy
 replay.couldNotOpen = Powtórka o ID "{0}" nie mogła zostać otwarta
 view.showSidePane = Pokaż szczegóły
 view.hideSidePane = Ukryj szczegóły
@@ -676,12 +695,13 @@ menu.revealReplayFolder = Pokaż folder z powtórkami
 menu.revealGamePrefsFile = Pokaż plik game.prefs
 ranked1v1.queuePopTimer = Dobór przeciwnika za {0,number,0}\:{1,number,00}
 game.create.generatedMap = Utwórz nową mapę
-game.avgRating.format = {0,number,\#}
+game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Generowanie mapy...
 game.mapGeneration.notification.message = Zaczekaj. (Version\: {0}, Seed\: {1})
 game.mapGeneration.failed.title = Tworzenie mapy zakończone niepowodzeniem
 game.mapGeneration.failed.message = Żądana mapa nie mogła zostać wygenerowana, proces tworzenia mapy nie został przerwany w oczekiwanym czasie. Kończenie procesu.
 game.mapGeneration.downloadGenerator.title = Pobieranie generatora map w wersji {0}
+# Fuzzy
 game.mapGeneration.generateMap.title = Tworzenie mapy... (Version\: {0}, Seed\: {1})
 login.environment = Środowisko
 login.button.downloadUpdate = Pobierz najnowszą wersję
@@ -694,6 +714,7 @@ vault.next = Następny
 vault.previous = Poprzedni
 settings.chat.addAutoJoinChannel = Dodaj kanał
 settings.chat.removeAutoJoinChannel = Usuń
+settings.chat.autoJoinChannelList = skonfiguruj kanały aby dołączyć
 settings.chat.autoJoinChannelPrompt = Dołącz do kanału (\#channel_name)
 game.player.globalRating = Jeden z rankingów globalnych gracza
 # There is a direct translation of ladder but it will be unintuitive within this environment (ranking drabinkowy) - could leave commonly used english loanword "ladderowe" - commonly used in relation to e-sports
@@ -701,8 +722,10 @@ game.player.globalRating = Jeden z rankingów globalnych gracza
 game.player.ladderRating = Jeden z rankingów ladderowych gracza
 userInfo.foe = Ten gracz jest twoim przeciwnikiem
 userInfo.friend = Ten gracz jest twoim sojusznikiem
+error.game.notTerminatedCorrectly = Gra nie wyłączyła się poprawnie i wciąż są otwarte pliki. Niektóre pliki z zainstalowanej gry nie mogły zostać skopiowane do FAF, ale jeśli ostatnio nie modyfikowałeś plików gry w zainstalowanej wersji nie masz się czym przejmować.\nGra zaraz się zacznie. 
 map.id = \#{0}
 mapGenerator.generationFailed = Podczas generowania mapy wystąpił błąd
+revert.alreadySymlinked = Cofnij to, mam to dowiązane symbolicznie
 mapDir.changed.noneAscii = Wykryliśmy użycie w nazwie użytkownika znaków specjalnych i  przenieśliśmy twój folder magazynu do lokalizacji awaryjnej.
 mapDir.changed.unix = Wykryliśmy, że posiadasz system na bazie unix i przenieśliśmy twój folder magazynu do lokalizacji awaryjnej.
 mapDir.changed.oneDrive = Wykryliśmy, że używasz OneDrive dla swoich dokumentów i przenieśliśmy twój folder magazynu do lokalizacji awaryjnej.
@@ -715,6 +738,7 @@ linksRules = Reguły
 linksModerationReport = Formularz zgłoszeniowy dla Moderacji
 linksDiscord = Discord
 linksFacebook = Facebook
+linksDevNews = blog dewelopera
 linksYoutube = YouTube
 mapVault.upload.rules = Potwierdzam, iż przeczytałem reguły dotyczące wstawiania map.
 mapVault.upload.openRules = Pokaż reguły
@@ -731,10 +755,19 @@ tutorial.tutorial = Samouczki
 tutorial.launch = Uruchom Samouczek
 tutorial.mapName = Nazwa mapy\: {0}
 tutorial.launchFailed = Uruchomienie Samouczka zakończone niepowodzeniem
+# Fuzzy
 mapVault.installationFailed = Instalacja mapy zakończona niepowodzeniem dla mapy "{0}" z wiadomością "{1}"
 tutorial.loading = Wczytywanie samouczków
 tutorial.noneAvailable = Obecnie brak samouczków
+clientUpdateAvailable.prereleaseNotification = wersja wstępna {0} jest dostępna ({1})
+settings.checkForPrerelease = Sprawdź, czy są dostępne wersje wstępne
+settings.prereleaseFeedback = Informacje zwrotne dotyczące wersji wstępnych
 settings.giveFeedback = Otwórz
+server.kicked.title = Zostałeś wyrzucony
+server.kicked.message = Zostałeś wyrzucony z FAF przez moderatora. Możesz sprawdzić nasze zasady dotyczące lobby/gry tutaj {0}.
+game.kicked.title = Zostałeś wyrzucony z gry
+game.kicked.message = Twoja gra została zakończona przez moderatora. Możesz sprawdzić nasze zasady dotyczące lobby/gry tutaj {0}.
+game.ratingRange = Zakres rankingu
 game.averageRating = Średni Ranking
 tiles.comparator.averageRatingDescending = Sortuj na bazie Średniego Rankingu Malejąco
 tiles.comparator.averageRatingAscending = Sortuj na bazie Średniego Rankingu Rosnąco
@@ -754,7 +787,13 @@ modVault.details.uploader = Wstawiony przez\: {0}
 modVault.details.author = Autorstwa\: {0}
 gameSelect.select.invalidPath = Niewłaściwa ścieżka
 gamePath.select.error = Coś poszło nie tak podczas wyboru ścieżki
+game.create.defaultGameTypeMarker = (domyślne)
+settings.general.startTab = Zakładka startowa
+startTab.selectTab = Wybierz okno startowe, w którym chcesz zaczynać.
+startTab.message = Tutaj możesz wybrać okno startowe . Możesz to zmienić później w ustawieniach, jeśli chcesz.
+startTab.title = Wybierz okno startowe
 startTab.save = Zapisz
+startTab.wantToConfigure = Wybierz okno startowe, w którym chcesz zaczynać. 
 startTab.configure = Konfiguruj
 vault.replays.onlyShowLastYear = Jedynie z ostatniego roku
 game.create.spawnCount = Ilość pozycji startowych
@@ -775,9 +814,13 @@ mod.manager.uiMods = UI
 mod.manager.simMods = SIM
 mod.manager.deselectAll = Odznacz wszystkie mody
 mod.manager.reload = Wczytaj ponownie
+mod.manager.simModsTooltip = Mody SIM to mody, które mają wpływ na wszystkich graczy w grze.
+mod.manager.uiModsTooltip = Mody UI to mody, które mają wpływ tylko na Ciebie w grze.
 modVault.modManager = Zarządzaj aktywnymi modami
 modVault.manageMods = Zarządzaj aktywnymi modami
+theme.needsRestart.quit = Koniec
 vault.loading = Wczytywanie...
+vault.searchError = podczas wyszukiwania wystąpił błąd
 vault.upload = Wstaw...
 replay.team = Drużyna {0}
 replay.noTeam = Brak Drużyn
@@ -793,6 +836,8 @@ game.generateMap.rampSlider = Stoki
 game.generateMap.random = Losowe
 game.generateMap.none = Brak
 game.generateMap.lots = Dużo
+settings.appearance.backgroundImage = Obraz tła
+settings.appearance.backgroundImage.description = Ustawienie obrazu tła zwiększy zużycie pamięci.
 mapVault.install = Zainstaluj
 chat.userContext.report = Zgłoś gracza
 userInfo.ratingHistory.allTime = Wszystkie
